--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -51,7 +51,7 @@
 
   <h4>Zweets</h4>
   <div class="row">
-    <div class="col-md-4 zweet-card border mb-5" *ngFor="let item of (items | async)">
+    <div class="col-md-4 zweet-card border mb-5 p-3" *ngFor="let item of (items | async)">
       <div class="panel panel-default">
         <div class="panel-body">
           <strong>test@user.com:</strong> <br />
