--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,8 +27,8 @@
         <label for="exampleInputPassword1">Password</label>
         <input type="password" class="form-control" name="password" required>
       </div>
-      <button type="button" class="btn btn-default">Signup</button>
       <button type="button" class="btn btn-primary">Login</button>
+      <button type="button" class="btn btn-default">Signup</button>
     </form>
   </div>
 
@@ -55,7 +55,7 @@
       <div class="panel panel-default">
         <div class="panel-body">
           <strong>test@user.com:</strong> <br />
-          Im at GDG Cloud Next Extended in Karachi!<br />
+          Im at Devday in Mons!<br />
           <small>posted at 2017-06-03 02:30 PM</small>
           <div class="btn btn-danger btn-sm btn-remove">
             <i class="fa fa-times"></i>
